# self_hosted_search_engine

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGS_STRUCTURE.txt  Makefile  README.md  README_LOGS.md  app.py  cli_search.py  config.py  config.yaml  docker-compose.yml  index_build.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/: copilot-instructions.md
app/: main.py
backend/: logging_utils.py  telemetry.py
chromadb/: __init__.py  config.py
crawler/: __init__.py  frontier.py  items.py  middlewares.py  pipelines.py  run.py  seeds.py  seeds.txt  settings.py  sitemaps.py  utils.py
desktop/: electron-builder.yml  main.ts  package-lock.json  package.json  preload.test.ts  preload.ts  tsconfig.json
docs/: CHANGELOG.md  CHAT_STREAMING.md  Desktop Feature Wiring.md  IMPLEMENTATION_SUMMARY.md  INTEGRITY_REPORT.md  REPO_SUMMARY.md  agent_runtime.md  backend-observability-tracing.md  backend_architecture.md  backend_contracts.md  backend_phase0_summary.md  backend_phases_progress.md  diagnostics.md  feature_traces_fallbacks.md  frontend_design_system.md  logging.md  logging_frontend.md  registry_structure.md  roadmap_browser.md
e2e/: graph.spec.ts  package.json  render_loop.spec.ts  roadmap.spec.ts  shadow_crawl.spec.ts
electron/: browser-data.js  browser-data.test.ts  main.js  preload.js
engine/: config.py
examples/: python_logging_config.py
frontend/: .env.example  .gitignore  README.md  middleware.ts  next.config.cjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.dev.config.ts  postcss.config.mjs  require-trace.cjs  require-trace.js  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontier/: __init__.py  dedupe.py  robots.py
llm/: __init__.py  seed_guesser.py
metrics/: counters.py
observability/: __init__.py
policy/: allowlist.yml
rank/: __init__.py  authority.py  blend.py
scripts/: bootstrap.sh  change_budget.py  check_migrations.sh  desktop_preflight.js  desktop_preflight.ts  dev_api_fallback.sh  dev_backend.sh  dev_console.sh  dev_verify.sh  diagnoseBrowser.js  ensure_frontend_deps.mjs  ensure_py311.sh  frontier_tool.py  manage.py  pack_backend.py  perf_smoke.py  preflight.sh  refresh.sh  run-desktop.js  stop_all.sh  system_check_has_critical.py  tail_telemetry.sh  test_render_loop_dev.sh  wait_on.sh
search/: __init__.py  frontier.py  indexer.py  query.py  seeds.py  smart_search.py
seed_loader/: __init__.py  curate.py  sources.py
seeds/: domains.txt  registry.yaml  seeds.txt  sitemaps.txt
server/: __init__.py  agent.py  agent_policy.py  agent_prompts.py  agent_tools_repo.py  discover.py  json_logger.py  learned_web_db.py  llm.py  logging_utils.py  middleware_logging.py  refresh_worker.py  runlog.py  seeds_loader.py  tool_logging.py  tools.py
shared/: browser-diagnostics-script.js
static/: style.css
templates/: index.html
tests/: backend_app_helpers.py  conftest.py  test_cold_start.py  test_crawl_client.py  test_crawler_frontier.py  test_crawler_middlewares.py  test_discover.py  test_e2e_cold_start.py  test_embedding_manager.py  test_extract_text.py  test_frontier.py  test_frontier_sqlite.py  test_health.py  test_index_roundtrip.py  test_index_schema_upgrade.py  test_integration_smoke.py  test_io_adapters.py  test_learned_web_db.py  (+17 more)
(+596 files in other folders)
